# DSPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  autoLoadDsp.sh  dsp.cpp  dsp.h  globals.h  host.cpp  plugin.cpp  plugin.h  readme.md  run.sh  ui.cpp  ui.h  wavEncoder.cpp  wavParser.cpp  wavParser.h
includes/: RtAudio.h
